<resources>
    <string name="app_name">StudyOnline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">null</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_register">登录/注册</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="commit_login">login</string>
    <string name="register">Register Now</string>
    <string name="forget_password">Forget Password?</string>
    <string name="lesson_news">课程资讯</string>
    <string name="flash_news">换一批？</string>
    <string name="defaultLessonName">Default Lesson Name</string>
    <string name="defaultLessonTeacher">Default Lesson Teacher</string>
    <string name="defaultLessonTime">Default Lesson Time</string>
    <string name="defaultLessonNumbers">Default Lesson Numbers</string>
    <string name="lessonInformation">课程概况</string>
    <string name="lessonStart">开始上课</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>Second
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="TheFirstClass">第一节</string>
    <string name="TheSecondClass">第二节</string>
    <string name="TheThirdClass">第三节</string>
    <string name="TheForthClass">第四节</string>
    <string name="TheFifthClass">第五节</string>
    <string name="TheSixthClass">第六节</string>
    <string name="TheSeventhClass">第七节</string>
    <string name="TheEightClass">第八节</string>
    <string name="TheNinthClass">第九节</string>
    <string name="TheTenthClass">第十节</string>
    <string name="choose_option">查看详情-></string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">我的课程</string>
    <string name="menu_slideshow">课程表</string>
    <string name="todo">TODO</string>
    <string name="title_activity_select_lesson">%1$s</string>
    <string name="detail">详情</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="main_teacher">主讲教师:</string>
    <string name="optional_lesson_time">上课周次:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user_id">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">欢迎使用StudyOnline</string>
    <string name="title_activity_lesson_information">LessonInformationActivity</string>
    <string name="tab_text_1">进度</string>
    <string name="tab_text_2">作业</string>
    <string name="tab_text_3">留言</string>
    <string name="title_studylog_list">studyLogs</string>
    <string name="title_studylog_detail">studyLog Detail</string>
    <string name="start_time_tmp">2020/04/16 20:00:00</string>
    <string name="end_time_tmp">2021/04/17 20:00:00</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="password_again">Password Again</string>
    <string name="send_message">发送</string>
    <string name="message_hint">请输入信息...</string>
    <string name="discuss">讨论</string>
    <string name="start_player">start_player</string>
    <string name="stop_player">stop_player</string>
    <string name="rtmp">rtmp://82.156.194.22/1/livestream</string>
</resources>