<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/roundlinearlayout_drawable"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="12dp">

        <TextView
            android:id="@+id/lesson_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/defaultLessonName"
            android:fontFamily="@font/lishu"
            android:textColor="@color/porcelain"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/lesson_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lishu"
            android:text="@string/defaultLessonTeacher"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/lesson_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lishu"
            android:text="@string/defaultLessonTime"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/lesson_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:text="@string/lessonInformation"
                android:background="@android:color/transparent"
                android:textColor="@color/sky_blue"
                android:visibility="visible"/>
            <Button
                android:id="@+id/lesson_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:text="@string/lessonStart"
                android:background="@drawable/btn_border_round"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>