<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    tools:context=".DialogActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/sky_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="40sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/andika"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input_drawable"
                android:id="@+id/username" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/andika"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textPassword"
                android:background="@drawable/input_drawable"
                android:id="@+id/password" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button_drawable"
            android:fontFamily="@font/aldrich"
            android:onClick="login"
            android:text="@string/commit_login"
            android:textSize="23sp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_200"
                    android:onClick="register"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_500"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_200"
                    android:onClick="forgetPassword"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/main"
        android:layout_alignEnd="@id/main"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@mipmap/close"
        android:onClick="cancelLogin"
        android:contentDescription="@string/todo" />

</RelativeLayout>