<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".LessonStartActivity">
    <net.ossrs.yasea.SrsCameraView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:visibility="gone"
        android:id="@+id/live_video" />
    <io.vov.vitamio.widget.VideoView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/live_watch" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/hanyilingxintijian"
        android:text="@string/discuss"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.1" >
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_height="match_parent"
            android:id="@+id/live_message"
            android:hint="@string/message_hint"
            android:background="@drawable/input_drawable"
            tools:ignore="NestedWeights" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:text="@string/send_message"
            android:textSize="20sp"
            android:textColor="@color/blue_violet"
            android:background="@android:color/transparent"
            android:id="@+id/send_message" />
    </LinearLayout>
</LinearLayout>